# my3d

./: CMakeLists.txt  main.cpp
include/: Camera.h  Shape.h
libs/My3dLib/: CMakeLists.txt
libs/My3dLib/include/: Camera.h  Color.h  FrameBuffer.h  Framebuffer.h  Lens.h  Obj_loader.h  Pixel.h  Point.h  Rasterizer.h  Screen.h  Shape.h  Transformable.h  Transformer.h  invert.h
libs/My3dLib/src/: Camera.cpp  Color.cpp  FrameBuffer.cpp  Framebuffer.cpp  Lens.cpp  Obj_loader.cpp  Rasterizer.cpp  Screen.cpp  Shape.cpp  Transformable.cpp  Transformer.cpp
libs/MyRaster/: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  OBJ_Parser.h  Screen.cpp  Shape.cpp  test.cpp
